--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cult-api",
+  "name": "blol-api",
   "version": "1.0.0",
-  "description": "api's for cult",
+  "description": "api's for lolmenow",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,7 @@
     "dev-start": "npm i && npm run migrate && nodemon src/index.js & tsc --watch",
     "start": "node src/index.js"
   },
-  "author": "Opinio",
+  "author": "markhanday",
   "license": "ISC",
   "dependencies": {
     "@types/async": "^2.0.34",
@@ -36,6 +36,8 @@
     "aws-sdk": "^2.7.10",
     "bcrypt": "^1.0.1",
     "cron": "^1.1.1",
+    "docker": "^1.0.0",
+    "docker-compose": "^0.2.0",
     "fb": "^1.1.1",
     "good": "^7.0.2",
     "good-console": "^6.3.1",
