--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
+    "outDir": "build",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
