--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "sequelize db:migrate",
     "compile": "tsc --skipLibCheck",
-    "dev-start-2": "npm i && npm run migrate && nodemon src/index.js & tsc --watch",
-    "dev-start": "npm i && nodemon src/index.js & tsc --watch",
-    "start": "node src/index.js"
+    "dev-start-2": "npm i && npm run migrate && nodemon build/src/index.js & tsc --watch",
+    "dev-start": "npm i && nodemon build/src/index.js & tsc --watch",
+    "start": "node build/src/index.js"
   },
   "author": "markhanday",
   "license": "ISC",
