--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,10 +1,21 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "0.1.0",
-    "command": "tsc",
-    "isShellCommand": true,
-    "args": ["-p", "."],
-    "showOutput": "silent",
-    "problemMatcher": "$tsc"
+    "tasks": [
+        {
+            "taskName": "tsc",
+            "command": "tsc",
+            "args": ["-w"],
+            "isShellCommand": true,
+            "isBackground": true,
+            "problemMatcher": "$tsc-watch"
+        },
+        {
+            "taskName": "build",
+            "command": "build",
+            "isBuildCommand": true,
+            "args": [
+                "PORT=3000 npm i && nodemon build/src/index.js & tsc --watch"
+            ]
+        }
+    ]
 }
