--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/sequelize": "^4.0.39",
     "aws-sdk": "^2.7.10",
     "bcrypt": "^1.0.1",
+    "bluebird": "^3.5.0",
     "cron": "^1.1.1",
     "docker": "^1.0.0",
     "docker-compose": "^0.2.0",
@@ -50,6 +51,8 @@
     "lodash": "^4.17.2",
     "mime": "^1.3.4",
     "moment": "^2.17.0",
+    "mongo": "^0.1.0",
+    "mongoose": "^4.11.0",
     "mysql": "^2.12.0",
     "nconf": "^0.8.4",
     "nodemailer": "^2.6.4",
