--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "api's for lolmenow",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "grunt": "grunt",
+    "test": "mocha build/src/test",
     "migrate": "sequelize db:migrate",
-    "compile": "tsc --skipLibCheck",
+    "compile": "tsc --watch",
     "start": "PORT=3000 npm i && nodemon build/src/index.js & tsc --watch"
   },
   "author": "markhanday",
@@ -42,6 +43,7 @@
     "good": "^7.0.2",
     "good-console": "^6.3.1",
     "good-squeeze": "^5.0.1",
+    "grunt": "^1.0.1",
     "hapi": "^15.2.0",
     "hapi-auth-jwt2": "^7.2.3",
     "hapi-swagger": "^7.4.0",
@@ -66,6 +68,13 @@
     "vision": "^4.1.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.1",
+    "@types/mocha": "^2.2.41",
+    "@types/mongodb": "^2.2.6",
+    "@types/mongoose": "^4.7.18",
+    "chai": "^4.0.2",
+    "gulp": "^3.9.1",
+    "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "tslint": "^4.0.1"
   }
