--- a/configurations/config.prod.json
+++ b/configurations/config.prod.json
@@ -3,14 +3,14 @@
     "protocol": "http",
     "apiUrl": "localhost",
     "port": 3000,
-    "webAppProtocol": "http",
-    "webAppUrl": "localhost",
+    "webAppProtocol": "https",
+    "webAppUrl": "lolmenow.herokuapp.com",
     "webAppPort": 4200
   },
   "facebook": {
     "appSecret": "a15dfa3968c29bf10d48cfc4cd9fab40",
     "appId": "335195490233143",
-    "redirectUri": "http://localhost:3000/v1/login/callback",
+    "redirectUri": "https://lolmenow.herokuapp.com/v1/login/callback",
     "apiVersion": "v2.9",
     "clientToken": "14105b034fc43eb444d755ec5d57dfd7"
   },
