--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "grunt": "grunt",
     "test": "mocha build/src/test",
-    "gulp-prod": "gulp copy-configs",
+    "gulp-prod": "node_modules/gulp/bin/gulp.js copy-configs",
     "migrate": "sequelize db:migrate",
     "compile": "tsc --watch",
     "dev": "PORT=3000 NODE_ENV='dev' npm i && nodemon build/src/index.js & tsc --watch --sourcemap",
@@ -70,9 +70,7 @@
     "typescript": "^2.0.10",
     "vision": "^4.1.0",
     "gulp": "^3.9.1",
-    "gulp-shell": "^0.6.3"
-  },
-  "devDependencies": {
+    "gulp-shell": "^0.6.3",
     "@types/chai": "^4.0.1",
     "@types/mocha": "^2.2.41",
     "@types/mongodb": "^2.2.6",
@@ -86,5 +84,7 @@
     "nodemon": "^1.11.0",
     "run-sequence": "^2.0.0",
     "tslint": "^4.0.1"
+  },
+  "devDependencies": {
   }
 }
