deploy test: changing typescript config

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "gulp-prod": "node_modules/gulp/bin/gulp.js copy-configs",
     "migrate": "sequelize db:migrate",
     "compile": "tsc --watch",
+    "typescript-compile": "node_modules/typescript/bin/tsc --sourcemap",
     "dev": "PORT=3000 NODE_ENV='dev' npm i && tsc --watch --sourcemap && nodemon build/src/index.js",
-    "start": "NODE_ENV='prod' npm i && npm run gulp-prod && tsc --sourcemap && node build/src/index.js"
+    "start": "NODE_ENV='prod' npm i && npm run gulp-prod && npm run typescript-compile && node build/src/index.js"
   },
   "author": "lolmenow",
   "license": "ISC",
