--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/aws-sdk": "0.0.42",
     "@types/bcrypt": "0.0.30",
     "@types/boom": "0.0.32",
+    "@types/chai": "^4.0.1",
     "@types/cookie": "^0.1.29",
     "@types/cron": "^1.0.30",
     "@types/fb": "0.0.22",
@@ -29,7 +30,10 @@
     "@types/jsonwebtoken": "^7.1.33",
     "@types/lodash": "^4.14.39",
     "@types/mime": "0.0.29",
+    "@types/mocha": "^2.2.41",
     "@types/moment": "^2.13.0",
+    "@types/mongodb": "^2.2.6",
+    "@types/mongoose": "^4.7.18",
     "@types/nconf": "0.0.32",
     "@types/node": "^6.0.49",
     "@types/nodemailer": "^1.3.32",
@@ -39,14 +43,21 @@
     "aws-sdk": "^2.7.10",
     "bcrypt": "^1.0.1",
     "bluebird": "^3.5.0",
-    "cron": "^1.1.1",
+    "chai": "^4.0.2",
+    "cron": "^1.2.1",
+    "del": "^3.0.0",
     "docker": "^1.0.0",
     "docker-compose": "^0.2.0",
-    "fb": "^1.1.1",
+    "fb": "^0.7.0",
+    "fb_promise": "^0.1.0",
     "good": "^7.0.2",
     "good-console": "^6.3.1",
     "good-squeeze": "^5.0.1",
     "grunt": "^1.0.1",
+    "gulp": "^3.9.1",
+    "gulp-shell": "^0.6.3",
+    "gulp-ts": "^0.3.0",
+    "gulp-typescript": "^3.1.7",
     "hapi": "^15.2.0",
     "hapi-auth-jwt2": "^7.2.3",
     "hapi-pagination": "^1.20.0",
@@ -55,37 +66,27 @@
     "inert": "^4.0.2",
     "inversify": "^3.0.0-beta.1",
     "lodash": "^4.17.2",
+    "merge2": "^1.0.3",
     "mime": "^1.3.4",
+    "mocha": "^3.4.2",
     "moment": "^2.17.0",
     "mongo": "^0.1.0",
     "mongoose": "^4.11.0",
     "mysql": "^2.12.0",
     "nconf": "^0.8.4",
+    "node-cron": "^1.2.0",
     "nodemailer": "^2.6.4",
     "nodemailer-ses-transport": "^1.5.0",
+    "nodemon": "^1.11.0",
     "razorpay": "^1.1.0",
     "redis": "^2.6.3",
     "reflect-metadata": "^0.1.8",
+    "run-sequence": "^2.0.0",
     "sequelize": "^3.27.0",
     "sequelize-cli": "^2.4.0",
+    "tslint": "^4.0.1",
     "typescript": "^2.0.10",
-    "vision": "^4.1.0",
-    "gulp": "^3.9.1",
-    "gulp-shell": "^0.6.3",
-    "@types/chai": "^4.0.1",
-    "@types/mocha": "^2.2.41",
-    "@types/mongodb": "^2.2.6",
-    "@types/mongoose": "^4.7.18",
-    "chai": "^4.0.2",
-    "del": "^3.0.0",
-    "gulp-ts": "^0.3.0",
-    "gulp-typescript": "^3.1.7",
-    "merge2": "^1.0.3",
-    "mocha": "^3.4.2",
-    "nodemon": "^1.11.0",
-    "run-sequence": "^2.0.0",
-    "tslint": "^4.0.1"
+    "vision": "^4.1.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
