--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api's for lolmenow",
   "main": "index.js",
   "scripts": {
-    "grunt": "grunt",
+    "phantomjs": "phantomjs --webdriver=4444",
     "test": "mocha build/src/test",
     "gulp-prod": "node_modules/gulp/bin/gulp.js run-prod",
     "migrate": "sequelize db:migrate",
