temp changes for fb post pull

--- a/package.json
+++ b/package.json
@@ -1,94 +1,94 @@
 {
-    "name": "blol-api",
-    "version": "1.0.0",
-    "description": "api's for lolmenow",
-    "main": "index.js",
-    "scripts": {
-        "grunt": "grunt",
-        "test": "mocha build/src/test",
-        "gulp-prod": "node_modules/gulp/bin/gulp.js run-prod",
-        "migrate": "sequelize db:migrate",
-        "compile": "tsc --watch",
-        "typescript-compile": "node_modules/typescript/bin/tsc --sourcemap",
-        "dev": "PORT=3000 NODE_ENV='dev' npm i && tsc --watch --sourcemap && nodemon build/src/index.js",
-        "start": "NODE_ENV='production' npm i && npm run gulp-prod && npm run typescript-compile && node build/src/index.js"
-    },
-    "author": "lolmenow",
-    "license": "ISC",
-    "dependencies": {
-        "@types/async": "^2.0.34",
-        "@types/aws-sdk": "0.0.42",
-        "@types/bcrypt": "0.0.30",
-        "@types/boom": "0.0.32",
-        "@types/cookie": "^0.1.29",
-        "@types/cron": "^1.0.30",
-        "@types/fb": "0.0.22",
-        "@types/hapi": "^13.0.37",
-        "@types/html-pdf": "^2.1.2",
-        "@types/joi": "^9.0.33",
-        "@types/jsonwebtoken": "^7.1.33",
-        "@types/lodash": "^4.14.39",
-        "@types/mime": "0.0.29",
-        "@types/moment": "^2.13.0",
-        "@types/nconf": "0.0.32",
-        "@types/node": "^6.0.49",
-        "@types/nodemailer": "^1.3.32",
-        "@types/nodemailer-ses-transport": "^1.4.4",
-        "@types/redis": "^0.12.33",
-        "@types/sequelize": "^4.0.39",
-        "aws-sdk": "^2.7.10",
-        "bcrypt": "^1.0.1",
-        "bluebird": "^3.5.0",
-        "cron": "^1.1.1",
-        "docker": "^1.0.0",
-        "docker-compose": "^0.2.0",
-        "fb": "^1.1.1",
-        "good": "^7.0.2",
-        "good-console": "^6.3.1",
-        "good-squeeze": "^5.0.1",
-        "grunt": "^1.0.1",
-        "hapi": "^15.2.0",
-        "hapi-auth-jwt2": "^7.2.3",
-        "hapi-pagination": "^1.20.0",
-        "hapi-swagger": "^7.4.0",
-        "html-pdf": "^2.1.0",
-        "inert": "^4.0.2",
-        "inversify": "^3.0.0-beta.1",
-        "lodash": "^4.17.2",
-        "mime": "^1.3.4",
-        "moment": "^2.17.0",
-        "mongo": "^0.1.0",
-        "mongoose": "^4.11.0",
-        "mysql": "^2.12.0",
-        "nconf": "^0.8.4",
-        "nodemailer": "^2.6.4",
-        "nodemailer-ses-transport": "^1.5.0",
-        "razorpay": "^1.1.0",
-        "redis": "^2.6.3",
-        "reflect-metadata": "^0.1.8",
-        "sequelize": "^3.27.0",
-        "sequelize-cli": "^2.4.0",
-        "typescript": "^2.0.10",
-        "vision": "^4.1.0",
-        "gulp": "^3.9.1",
-        "gulp-shell": "^0.6.3",
-        "@types/chai": "^4.0.1",
-        "@types/mocha": "^2.2.41",
-        "@types/mongodb": "^2.2.6",
-        "@types/mongoose": "^4.7.18",
-        "chai": "^4.0.2",
-        "del": "^3.0.0",
-        "gulp-ts": "^0.3.0",
-        "gulp-typescript": "^3.1.7",
-        "merge2": "^1.0.3",
-        "mocha": "^3.4.2",
-        "nodemon": "^1.11.0",
-        "run-sequence": "^2.0.0",
-        "tslint": "^4.0.1",
-        "phantomjs": "^2.1.7",
-        "selenium-node-webdriver": "^0.1.2",
-        "selenium-webdriver": "^3.4.0"
-    },
-    "devDependencies": {
-    }
+  "name": "blol-api",
+  "version": "1.0.0",
+  "description": "api's for lolmenow",
+  "main": "index.js",
+  "scripts": {
+    "grunt": "grunt",
+    "test": "mocha build/src/test",
+    "gulp-prod": "node_modules/gulp/bin/gulp.js run-prod",
+    "migrate": "sequelize db:migrate",
+    "compile": "tsc --watch",
+    "typescript-compile": "node_modules/typescript/bin/tsc --sourcemap",
+    "dev": "PORT=3000 NODE_ENV='dev' npm i && tsc --watch --sourcemap && nodemon build/src/index.js",
+    "start": "NODE_ENV='production' npm i && npm run gulp-prod && npm run typescript-compile && node build/src/index.js"
+  },
+  "author": "lolmenow",
+  "license": "ISC",
+  "dependencies": {
+    "@types/async": "^2.0.34",
+    "@types/aws-sdk": "0.0.42",
+    "@types/bcrypt": "0.0.30",
+    "@types/boom": "0.0.32",
+    "@types/chai": "^4.0.1",
+    "@types/cookie": "^0.1.29",
+    "@types/cron": "^1.0.30",
+    "@types/fb": "0.0.22",
+    "@types/hapi": "^13.0.37",
+    "@types/html-pdf": "^2.1.2",
+    "@types/joi": "^9.0.33",
+    "@types/jsonwebtoken": "^7.1.33",
+    "@types/lodash": "^4.14.39",
+    "@types/mime": "0.0.29",
+    "@types/mocha": "^2.2.41",
+    "@types/moment": "^2.13.0",
+    "@types/mongodb": "^2.2.6",
+    "@types/mongoose": "^4.7.18",
+    "@types/nconf": "0.0.32",
+    "@types/node": "^6.0.49",
+    "@types/nodemailer": "^1.3.32",
+    "@types/nodemailer-ses-transport": "^1.4.4",
+    "@types/redis": "^0.12.33",
+    "@types/sequelize": "^4.0.39",
+    "aws-sdk": "^2.7.10",
+    "bcrypt": "^1.0.1",
+    "bluebird": "^3.5.0",
+    "chai": "^4.0.2",
+    "cron": "^1.1.1",
+    "del": "^3.0.0",
+    "docker": "^1.0.0",
+    "docker-compose": "^0.2.0",
+    "fb": "^1.1.1",
+    "good": "^7.0.2",
+    "good-console": "^6.3.1",
+    "good-squeeze": "^5.0.1",
+    "grunt": "^1.0.1",
+    "gulp": "^3.9.1",
+    "gulp-shell": "^0.6.3",
+    "gulp-ts": "^0.3.0",
+    "gulp-typescript": "^3.1.7",
+    "hapi": "^15.2.0",
+    "hapi-auth-jwt2": "^7.2.3",
+    "hapi-pagination": "^1.20.0",
+    "hapi-swagger": "^7.4.0",
+    "html-pdf": "^2.1.0",
+    "inert": "^4.0.2",
+    "inversify": "^3.0.0-beta.1",
+    "lodash": "^4.17.2",
+    "merge2": "^1.0.3",
+    "mime": "^1.3.4",
+    "mocha": "^3.4.2",
+    "moment": "^2.17.0",
+    "mongo": "^0.1.0",
+    "mongoose": "^4.11.0",
+    "mysql": "^2.12.0",
+    "nconf": "^0.8.4",
+    "nodemailer": "^2.6.4",
+    "nodemailer-ses-transport": "^1.5.0",
+    "nodemon": "^1.11.0",
+    "phantomjs": "^2.1.7",
+    "razorpay": "^1.1.0",
+    "redis": "^2.6.3",
+    "reflect-metadata": "^0.1.8",
+    "run-sequence": "^2.0.0",
+    "selenium-node-webdriver": "^0.1.2",
+    "selenium-webdriver": "^3.4.0",
+    "sequelize": "^3.27.0",
+    "sequelize-cli": "^2.4.0",
+    "string-format": "^0.5.0",
+    "tslint": "^4.0.1",
+    "typescript": "^2.0.10",
+    "vision": "^4.1.0"
+  },
+  "devDependencies": {}
 }
