--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "mongoose": "^4.11.0",
     "mysql": "^2.12.0",
     "nconf": "^0.8.4",
+    "node-fetch": "^1.7.1",
     "nodemailer": "^2.6.4",
     "nodemailer-ses-transport": "^1.5.0",
     "nodemon": "^1.11.0",
