--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "del": "^3.0.0",
     "docker": "^1.0.0",
     "docker-compose": "^0.2.0",
+    "download-file": "^0.1.5",
     "fb": "^1.1.1",
     "good": "^7.0.2",
     "good-console": "^6.3.1",
@@ -62,6 +63,7 @@
     "hapi-pagination": "^1.20.0",
     "hapi-swagger": "^7.4.0",
     "html-pdf": "^2.1.0",
+    "image-diff": "^1.6.3",
     "inert": "^4.0.2",
     "inversify": "^3.0.0-beta.1",
     "lodash": "^4.17.2",
