adding boom library. from now on we can use boom to return formatted error

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "aws-sdk": "^2.7.10",
     "bcrypt": "^1.0.1",
     "bluebird": "^3.5.0",
+    "boom": "^5.1.0",
     "chai": "^4.0.2",
     "cron": "^1.1.1",
     "del": "^3.0.0",
